--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="./bg.css" />
   <link rel="stylesheet" href="./food.css" />
   <link rel="stylesheet" href="place.css">
+  <link rel="stylesheet" href="pages/hl-page.css">
 </head>
 
 <body>
@@ -703,6 +704,109 @@
       </div>
     </div>
   </div>
+
+<!-- HOTEL SECTION -->
+
+<div class="hotels">
+  <div class="hotel">
+    <h4>Mehmonhonalar</h4>
+    <img src="./assets/photos/line-break-10.svg" alt="underline_photo" />
+  </div>
+  <div class="container">
+    <div class="hotels-container">
+      <div class="hotels-container-items">
+        <div class="hotels-container-item">
+          <div class="HotelimgBx">
+            <img src="./assets/photos/hotels/silk road.png" alt="image" />
+          </div>
+          <h4>"SILK ROAD”</h4>
+          <hr>
+          <p>
+            <i class="fa-solid fa-location-arrow"></i>
+             "SILK ROAD” mehmonxonasi (Manzili: Qo‘qon sh., Turkiston ko‘chasi 57a-uy)
+          </p>
+          <!-- <hr> -->
+          <a href="pages/hl-page1.html">
+            <button class="hl-btn">Batafsil</button>
+          </a>
+        </div>
+
+
+        <div class="hotels-container-item is-up">
+          <div class="HotelimgBx">
+            <img src="./assets/photos/hotels/asmald.png" alt="image" />
+          </div>
+          <h4>“ASMALD”</h4>
+          <hr>
+          <p>
+            <i class="fa-solid fa-location-arrow"></i>
+            “ASMALD” mehmonxonasi (Manzili: Qo‘qon sh., Yangi hayot ko‘chasi 42-uy)
+          </p>
+          <hr>
+          <a href="pages/hl-page2.html">
+            <button class="hl-btn">Batafsil</button>
+          </a>
+        </div>
+
+
+        <div class="hotels-container-item">
+          <div class="HotelimgBx">
+            <img src="./assets/photos/hotels/asr.png" alt="image" />
+          </div>
+          <h4>“ASR”</h4>
+          <hr>
+          <p>
+            <i class="fa-solid fa-location-arrow"></i>
+            “ASR” mehmonxonasi (Manzili: Qo‘qon sh., Movarounnahr ko‘chasi 43/2-uy)
+          </p>
+          <hr>
+          <a href="pages/hl-page3.html">
+            <button class="hl-btn">Batafsil</button>
+          </a>
+        </div>
+        <div class="hotels-container-item">
+          <div class="HotelimgBx">
+            <img src="./assets/photos/hotels/khan.png" alt="image" />
+          </div>
+          <hr>
+          <h4>“KHAN”</h4>
+          <hr>
+          <p>
+            <i class="fa-solid fa-location-arrow"></i>
+            “KHAN” mehmonxonasi (Manzili:Qo‘qon sh., Istiqlol ko‘chasi 31-uy)
+          </p>
+          <hr>
+          <a href="pages/hl-page4.html">
+            <button class="hl-btn">Batafsil</button>
+          </a>
+        </div>
+        <div class="hotels-container-item is-up">
+          <div class="HotelimgBx">
+            <img src="./assets/photos/hotels/qasr.png" alt="image" />
+          </div>
+          <h4>“QASR”</h4>
+          <hr>
+          <p>
+            <i class="fa-solid fa-location-arrow"></i>
+            “QASR” mehmonxonasi (Manzili: Qo‘qon sh., Turkiston ko‘chasi 28-ye-uy)
+          </p>
+          <hr>
+          <a href="pages/hl-page5.html">
+            <button class="hl-btn">Batafsil</button>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
   <!-- Why choose us -->
   <div class="why-we">
     <div class="container">
