--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="./food.css" />
   <link rel="stylesheet" href="place.css">
   <link rel="stylesheet" href="pages/hl-page.css">
+  <link rel="stylesheet" href="hotel.css">
 </head>
 
 <body>
@@ -124,7 +125,7 @@
         <div class="welcome-section-textBx">
           <h1>QO'QON SHAHRIGA XUSH KELIBSIZ !</h1>
           <p>
-            Qoʻqon — Oʻzbekiston Respublikasi shahar. Soʻx daryosining
+            Qoʻqon — Oʻzbekiston Respublikasi Soʻx daryosining
             (tarmogʻi) quyi oqimida joylashgan. Aholisi — 310716 nafar
             (2020-yil). Qoʻqon xonligining poytaxti boʻlgan. Bu shahar
             Fargʻona viloyatining yirik shaharlaridan biridir. Mahalliy
@@ -707,7 +708,138 @@
 
 <!-- HOTEL SECTION -->
 
-<div class="hotels">
+<div class="hotels-sections">
+  <div class="container">
+    <div class="hotels-section-item">
+      <div class="hotels-section-item-title">
+        <h4>Mehmonhonalar</h4>
+      </div>
+      <div class="hotels-cards">
+
+
+        <div class="hotels-nft">
+          <div class="hotels-main">
+            <img class="hotels-tokenImage" src="assets/photos/hotels/silk road.png" alt="NFT" />
+            <h2>SILK ROAD</h2>
+            <div class="hotels-creator">
+              <div class="hotels-wrapper">
+                <img src="assets/background/Untitled.png" alt="Creator" />
+              </div>
+              <p><ins>
+             "SILK ROAD” mehmonxonasi</ins></p>
+            </div>
+            <a href="pages/hl-page1.html">
+              <button class="button2">Batafsil</button>
+            </a>
+          </div>
+        </div>
+
+        <div class="hotels-nft">
+          <div class="hotels-main">
+            <img class="hotels-tokenImage" src="assets/photos/hotels/asmald.png" alt="NFT" />
+            <h2>“ASMALD”</h2>
+            <div class="hotels-creator">
+              <div class="hotels-wrapper">
+                <img src="assets/background/Untitled.png" alt="Creator" />
+              </div>
+              <p><ins>Asmald mehmonxonasi</ins></p>
+            </div>
+            <a href="pages/hl-page2.html">
+              <button class="button2">Batafsil</button>
+            </a>
+          </div>
+        </div>
+
+        <div class="hotels-nft">
+          <div class="hotels-main">
+            <img class="hotels-tokenImage" src="assets/photos/hotels/asr.png" alt="NFT" />
+            <h2>“ASR”</h2>
+            <div class="hotels-creator">
+              <div class="hotels-wrapper">
+                <img src="assets/background/Untitled.png" alt="Creator" />
+              </div>
+              <p><ins>Asr mehmonxonasi </ins></p>
+            </div>
+            <a href="pages/hl-page3.html">
+              <button class="button2">Batafsil</button>
+            </a>
+          </div>
+        </div>
+
+        <div class="hotels-nft">
+          <div class="hotels-main">
+            <img class="hotels-tokenImage" src="assets/photos/hotels/khan.png" alt="NFT" />
+            <h2>“KHAN”</h2>
+            <div class="hotels-creator">
+              <div class="hotels-wrapper">
+                <img src="assets/background/Untitled.png" alt="Creator" />
+              </div>
+              <p><ins>Khan mehmonxonasi </ins> </p>
+            </div>
+            <a href="pages/hl-page4.html">
+              <button class="button2">Batafsil</button>
+            </a>
+          </div>
+        </div>
+
+        <div class="hotels-nft">
+          <div class="hotels-main">
+            <img class="hotels-tokenImage" src="assets/photos/hotels/qasr.png" alt="NFT" />
+            <h2>“QASR”</h2>
+            <div class="hotels-creator">
+              <div class="hotels-wrapper">
+                <img src="assets/background/Untitled.png" alt="Creator" />
+              </div>
+              <p><ins>“QASR” mehmonxonasi</ins> </p>
+            </div>
+            <a href="pages/hl-page5.html">
+              <button class="button2">Batafsil</button>
+            </a>
+          </div>
+        </div>
+
+        <div class="hotels-nft">
+          <div class="hotels-main">
+            <img class="hotels-tokenImage" src="assets/photos/hotels/reikartz.png" alt="NFT" />
+            <h2>“HOTEL REIKARTZ KOKAND”</h2>
+            <div class="hotels-creator">
+              <div class="hotels-wrapper">
+                <img src="assets/background/Untitled.png" alt="Creator" />
+              </div>
+              <p><ins>“HOTEL REIKARTZ KOKAND” mehmonxonasi</ins> </p>
+            </div>
+            <a href="pages/hl-page6.html">
+              <button class="button2">Batafsil</button>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <div class="hotels">
   <div class="hotel">
     <h4>Mehmonhonalar</h4>
     <img src="./assets/photos/line-break-10.svg" alt="underline_photo" />
@@ -725,7 +857,7 @@
             <i class="fa-solid fa-location-arrow"></i>
              "SILK ROAD” mehmonxonasi (Manzili: Qo‘qon sh., Turkiston ko‘chasi 57a-uy)
           </p>
-          <!-- <hr> -->
+          <hr>
           <a href="pages/hl-page1.html">
             <button class="hl-btn">Batafsil</button>
           </a>
@@ -761,7 +893,7 @@
           </p>
           <hr>
           <a href="pages/hl-page3.html">
-            <button class="hl-btn">Batafsil</button>
+            <button class="button2">Batafsil</button>
           </a>
         </div>
         <div class="hotels-container-item">
@@ -798,7 +930,7 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 
 
 
