--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="place.css">
   <link rel="stylesheet" href="pages/hl-page.css">
   <link rel="stylesheet" href="hotel.css">
+  <link rel="stylesheet" href="pages/media-new.css">
 </head>
 
 <body>
@@ -143,7 +144,7 @@
           <a href="./pages/news/news.html"><button class="welcome-section-btn">Batafsil</button></a>
         </div>
         <div class="mapdiv">
-          <svg class="map" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+          <svg  class="map" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
             x="0px" y="0px" viewBox="0 0 652 422" enable-background="new 0 0 652 422" xml:space="preserve">
             <g id="Shape_1_1_">
               <g id="Shape_1">
@@ -215,17 +216,19 @@
                 </g>
               </g>
             </g>
-            <g id="Shape_5_1_" enable-background="new    ">
-              <g id="Shape_5">
-                <g>
-                  <path id="qoqon" fill-rule="evenodd" clip-rule="evenodd" fill="#3592B8"
-                    d="M228,103c-0.4-1.1-1.7-2.9-3-4s-1.9-2.9-3-3c-1.1-0.1-2.3-1-4-1
+            <a href="https://maps.app.goo.gl/EVTLNnwqHSUcpEZ59" target="_blank">
+              <g id="Shape_5_1_" enable-background="new    ">
+                <g id="Shape_5">
+                  <g>
+                    <path id="qoqon" fill-rule="evenodd" clip-rule="evenodd" fill="#3592B8"
+                      d="M228,103c-0.4-1.1-1.7-2.9-3-4s-1.9-2.9-3-3c-1.1-0.1-2.3-1-4-1
                     c-1.7,0-3.1,0.3-4,0c-0.9-0.3-2-0.4-3-1s-1.7-2.3-3-2c-1.3,0.3-3.6,2-4,3c-0.4,1-3.9,4.4-4,5c-0.1,0.6-2,6-2,6s-1.1,3.9-1,5
                     c0.1,1.1-1,5.6-2,6s-3,2-3,2s0,1.4,1,3c1,1.6,3.1,5.7,5,7c1.9,1.3,3.9,1.7,6,2c2.1,0.3,4.4,1.4,6,1c1.6-0.4,4,0,4,0s2.7-2.3,3-3
                     s1-3.6,2-4c1-0.4,4.4-2.1,5-3c0.6-0.9,0-2.1,1-3c1-0.9,1.9-2.9,2-4c0.1-1.1,0.4-5,1-7S228.4,104.1,228,103z"></path>
+                  </g>
                 </g>
               </g>
-            </g>
+            </a>
             <g id="Shape_6_1_" enable-background="new    ">
               <g id="Shape_6">
                 <g>
@@ -549,6 +552,14 @@
               </video>
             </div>
           </div>
+
+          <a href="./pages/media-page.html">
+            <button class="media-container-button">
+              <span class="transition"></span>
+              <span class="gradient"></span>
+              <span class="label">Batafsil</span>
+            </button>
+
         </div>
       </div>
     </div>
@@ -706,117 +717,117 @@
     </div>
   </div>
 
-<!-- HOTEL SECTION -->
+  <!-- HOTEL SECTION -->
 
-<div class="hotels-sections">
-  <div class="container">
-    <div class="hotels-section-item">
-      <div class="hotels-section-item-title">
-        <h4>Mehmonhonalar</h4>
-      </div>
-      <div class="hotels-cards">
-
-
-        <div class="hotels-nft">
-          <div class="hotels-main">
-            <img class="hotels-tokenImage" src="assets/photos/hotels/silk road.png" alt="NFT" />
-            <h2>SILK ROAD</h2>
-            <div class="hotels-creator">
-              <div class="hotels-wrapper">
-                <img src="assets/background/Untitled.png" alt="Creator" />
-              </div>
-              <p><ins>
-             "SILK ROAD” mehmonxonasi</ins></p>
-            </div>
-            <a href="pages/hl-page1.html">
-              <button class="button2">Batafsil</button>
-            </a>
-          </div>
+  <div class="hotels-sections">
+    <div class="container">
+      <div class="hotels-section-item">
+        <div class="hotels-section-item-title">
+          <h4>Mehmonhonalar</h4>
         </div>
+        <div class="hotels-cards">
 
-        <div class="hotels-nft">
-          <div class="hotels-main">
-            <img class="hotels-tokenImage" src="assets/photos/hotels/asmald.png" alt="NFT" />
-            <h2>“ASMALD”</h2>
-            <div class="hotels-creator">
-              <div class="hotels-wrapper">
-                <img src="assets/background/Untitled.png" alt="Creator" />
+
+          <div class="hotels-nft">
+            <div class="hotels-main">
+              <img class="hotels-tokenImage" src="assets/photos/hotels/silk road.png" alt="NFT" />
+              <h2>SILK ROAD</h2>
+              <div class="hotels-creator">
+                <div class="hotels-wrapper">
+                  <img src="assets/background/Untitled.png" alt="Creator" />
+                </div>
+                <p><ins>
+                    "SILK ROAD” mehmonxonasi</ins></p>
               </div>
-              <p><ins>Asmald mehmonxonasi</ins></p>
+              <a href="pages/hl-page1.html">
+                <button class="button2">Batafsil</button>
+              </a>
             </div>
-            <a href="pages/hl-page2.html">
-              <button class="button2">Batafsil</button>
-            </a>
           </div>
-        </div>
 
-        <div class="hotels-nft">
-          <div class="hotels-main">
-            <img class="hotels-tokenImage" src="assets/photos/hotels/asr.png" alt="NFT" />
-            <h2>“ASR”</h2>
-            <div class="hotels-creator">
-              <div class="hotels-wrapper">
-                <img src="assets/background/Untitled.png" alt="Creator" />
+          <div class="hotels-nft">
+            <div class="hotels-main">
+              <img class="hotels-tokenImage" src="assets/photos/hotels/asmald.png" alt="NFT" />
+              <h2>“ASMALD”</h2>
+              <div class="hotels-creator">
+                <div class="hotels-wrapper">
+                  <img src="assets/background/Untitled.png" alt="Creator" />
+                </div>
+                <p><ins>Asmald mehmonxonasi</ins></p>
               </div>
-              <p><ins>Asr mehmonxonasi </ins></p>
+              <a href="pages/hl-page2.html">
+                <button class="button2">Batafsil</button>
+              </a>
             </div>
-            <a href="pages/hl-page3.html">
-              <button class="button2">Batafsil</button>
-            </a>
           </div>
-        </div>
 
-        <div class="hotels-nft">
-          <div class="hotels-main">
-            <img class="hotels-tokenImage" src="assets/photos/hotels/khan.png" alt="NFT" />
-            <h2>“KHAN”</h2>
-            <div class="hotels-creator">
-              <div class="hotels-wrapper">
-                <img src="assets/background/Untitled.png" alt="Creator" />
+          <div class="hotels-nft">
+            <div class="hotels-main">
+              <img class="hotels-tokenImage" src="assets/photos/hotels/asr.png" alt="NFT" />
+              <h2>“ASR”</h2>
+              <div class="hotels-creator">
+                <div class="hotels-wrapper">
+                  <img src="assets/background/Untitled.png" alt="Creator" />
+                </div>
+                <p><ins>Asr mehmonxonasi </ins></p>
               </div>
-              <p><ins>Khan mehmonxonasi </ins> </p>
+              <a href="pages/hl-page3.html">
+                <button class="button2">Batafsil</button>
+              </a>
             </div>
-            <a href="pages/hl-page4.html">
-              <button class="button2">Batafsil</button>
-            </a>
           </div>
-        </div>
 
-        <div class="hotels-nft">
-          <div class="hotels-main">
-            <img class="hotels-tokenImage" src="assets/photos/hotels/qasr.png" alt="NFT" />
-            <h2>“QASR”</h2>
-            <div class="hotels-creator">
-              <div class="hotels-wrapper">
-                <img src="assets/background/Untitled.png" alt="Creator" />
+          <div class="hotels-nft">
+            <div class="hotels-main">
+              <img class="hotels-tokenImage" src="assets/photos/hotels/khan.png" alt="NFT" />
+              <h2>“KHAN”</h2>
+              <div class="hotels-creator">
+                <div class="hotels-wrapper">
+                  <img src="assets/background/Untitled.png" alt="Creator" />
+                </div>
+                <p><ins>Khan mehmonxonasi </ins> </p>
               </div>
-              <p><ins>“QASR” mehmonxonasi</ins> </p>
+              <a href="pages/hl-page4.html">
+                <button class="button2">Batafsil</button>
+              </a>
             </div>
-            <a href="pages/hl-page5.html">
-              <button class="button2">Batafsil</button>
-            </a>
           </div>
-        </div>
 
-        <div class="hotels-nft">
-          <div class="hotels-main">
-            <img class="hotels-tokenImage" src="assets/photos/hotels/reikartz.png" alt="NFT" />
-            <h2>“HOTEL REIKARTZ KOKAND”</h2>
-            <div class="hotels-creator">
-              <div class="hotels-wrapper">
-                <img src="assets/background/Untitled.png" alt="Creator" />
+          <div class="hotels-nft">
+            <div class="hotels-main">
+              <img class="hotels-tokenImage" src="assets/photos/hotels/qasr.png" alt="NFT" />
+              <h2>“QASR”</h2>
+              <div class="hotels-creator">
+                <div class="hotels-wrapper">
+                  <img src="assets/background/Untitled.png" alt="Creator" />
+                </div>
+                <p><ins>“QASR” mehmonxonasi</ins> </p>
               </div>
-              <p><ins>“HOTEL REIKARTZ KOKAND” mehmonxonasi</ins> </p>
+              <a href="pages/hl-page5.html">
+                <button class="button2">Batafsil</button>
+              </a>
             </div>
-            <a href="pages/hl-page6.html">
-              <button class="button2">Batafsil</button>
-            </a>
+          </div>
+
+          <div class="hotels-nft">
+            <div class="hotels-main">
+              <img class="hotels-tokenImage" src="assets/photos/hotels/reikartz.png" alt="NFT" />
+              <h2>“HOTEL REIKARTZ KOKAND”</h2>
+              <div class="hotels-creator">
+                <div class="hotels-wrapper">
+                  <img src="assets/background/Untitled.png" alt="Creator" />
+                </div>
+                <p><ins>“HOTEL REIKARTZ KOKAND” mehmonxonasi</ins> </p>
+              </div>
+              <a href="pages/hl-page6.html">
+                <button class="button2">Batafsil</button>
+              </a>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-</div>
 
 
 
@@ -839,7 +850,7 @@
 
 
 
-<!-- <div class="hotels">
+  <!-- <div class="hotels">
   <div class="hotel">
     <h4>Mehmonhonalar</h4>
     <img src="./assets/photos/line-break-10.svg" alt="underline_photo" />
